add java server source & upgrade jre 8 to 12