@@ -4,7 +4,7 @@ Uma interface para acessar o analisador morfológico e o corretor gramatical do 
 # Pré-requisitos
  - interpretador Python 3.x
  - Pacote py4j (*pip install py4j*)
- - Java Runtime Environment 8
+ - Java Runtime Environment 12 (use a release 0.2 para JRE 8)
 
 # Como usar
 Baixe os arquivos **cogroo_interface.py** e **setup.py** e instale o pacote com o comando:
@@ -34,6 +34,31 @@ Após isso, em uma IDE Python de sua preferência (ex. IPython, Spyder), importe
 ```
 
 Agora você já pode usar os recursos do CoGrOO. Esta interface disponibiliza métodos para retornar uma análise morfológica completa de um documento, lematizar, identificar partes do discurso, dividir em chunks e verificar erros gramaticais. 
+
+## Avisos 'Illegal reflective access'
+Após migrar o server do CoGrOO para Java 12, passou a ser exibido o seguinte aviso no console do servidor Java ao processar o primeiro texto enviado para análise:
+
+```
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by py4j.reflection.MethodInvoker$1 (file:/.../cogroo4py.jar) to method java.util.ArrayList$Itr.next()      
+WARNING: Please consider reporting this to the maintainers of py4j.reflection.MethodInvoker$1
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+```
+
+Esse aviso é exibido por causa do problema descrito [neste issue da biblioteca py4j](https://github.com/bartdag/py4j/issues/314) e não afeta o funcionamento do programa.
+Assim que o problema for tratado na biblioteca py4j atualizarei o servidor Java aqui.
+
+## Recompilar servidor Java
+
+Caso precise fazer alguma alteração no servidor Java, você pode recompilá-lo rodando os seguintes comandos na pasta `server` (necessário ter um JDK e o Maven instalados):
+
+```sh
+mvn install
+mvn bundle:bundle
+```
+
+Um arquivo jar será gerado na pasta `server/target` que equivale ao arquivo `cogroo4py.jar` da pasta raiz do repositório (que adicionei só para facilitar o uso do cogroo4py sem precisar entender Java e ter o Maven instalado).
 
 ## Lematizando
 A lematização consiste em obter o lema das palavras de um texto. O lema é uma versão da palavra que representa todas as suas flexões. Os verbos são alterados para o infinitivo e substantivos e adjetivos são flexionados para o masculino do singular.
